[package]
name = "eth-rpc-check"
version = "0.1.0"
edition = "2021"
authors = ["ETH RPC Check Tool"]
description = "A tool to test ETH and BSC RPC methods latency"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.2"
statrs = "0.16"
prettytable-rs = "0.10"
futures = "0.3"
chrono = "0.4"
anyhow = "1.0"
itertools = "0.11"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
url = "2.3"
